Project

General

Profile

Actions

Bug #9558

closed

Bus Error on Sparc in r45155 due to __attribute__((packed))

Bug #9558: Bus Error on Sparc in r45155 due to __attribute__((packed))

Added by ngoto (Naohisa Goto) over 12 years ago. Updated over 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.2.0dev (2014-02-23) [sparc64-solaris2.10]
[ruby-core:61049]

Description

Since r45155, the following error occurs on Sparc Solaris.

$ ./ruby --disable-gems -e 'p Time.now.utc'
-e:1: [BUG] Bus Error at 0xffffffff7fffe775
ruby 2.2.0dev (2014-02-23) [sparc64-solaris2.10]

-- Control frame information -----------------------------------------------
c:0003 p:---- s:0008 e:000007 CFUNC :utc
c:0002 p:0014 s:0005 E:001fb8 EVAL -e:1 [FINISH]
c:0001 p:0000 s:0002 E:0006e8 TOP [FINISH]

-- Ruby level backtrace information ----------------------------------------
-e:1:in <main>' -e:1:in utc'

-- Other runtime information -----------------------------------------------

  • Loaded script: -e

  • Loaded features:

    0 enumerator.so

[NOTE]
You may have encountered a bug in the Ruby interpreter or extension libraries.
Bug reports are welcome.
For details: http://www.ruby-lang.org/bugreport.html

Abort

This is due to attribute((packed)) added in r45155.
SPARC (and many other CPUs) can not access to unaligned memory address.

Please revert r45155.

Actions

Also available in: PDF Atom